--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,30 +1,22 @@
 apply plugin: 'com.android.application'
-
 android {
-    compileSdkVersion 26
+    compileSdkVersion 23
     buildToolsVersion "25.0.3"
+
     defaultConfig {
         applicationId "demo.diamond.com.parallaxlayoutinflater"
-        minSdkVersion 15
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        minSdkVersion 11
+        targetSdkVersion 18
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:support-v4:19.1.0'
 }
